--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,32 @@
 stages:
   - build
+  - test
 
 variables:
   TAG: $CI_BUILD_REF
   IMAGE: $CI_REGISTRY_IMAGE
 
+services:
+  - docker:dind
+
+image: docker
+
+before_script:
+  - apk add --update py-pip
+  - pip install docker-compose
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+
 build:
   stage: build
-  services:
-      - docker:dind
   script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY_IMAGE
     - docker-compose -f docker-compose.common.yml -f docker-compose.prod.yml build
     - docker-compose -f docker-compose.common.yml -f docker-compose.prod.yml push
   only:
     - master
   tags:
     - docker
+
+test-python:
+  stage: test
+  script:
+    - docker-compose -f docker-compose.common.yml -f docker-compose.prod.yml run --rm --entrypoint pytest
